fixed nav bar overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ body {
 
 .card {
   display: block;
-  background: #003737;
+  background: rgba(0, 0, 0, 0.5);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 2px;
@@ -35,9 +35,7 @@ body {
 .card {
   padding: 0px 16px 16px 2px;
 }
-.container {
-  padding: 2px 16px;
-}
+
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -81,6 +79,11 @@ textarea,
   list-style: none;
   width: 100%;
   justify-content: center;
+}
+
+i {
+  margin: 0 1em;
+  color: black;
 }
 
 .navbar ul li {
@@ -175,6 +178,13 @@ div.item {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 1em;
+}
+.titleContainer {
+  border: none;
+  padding: 1em 2em;
+  margin-bottom: 1em;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 h1 {
   padding-top: 0;
